--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
       <input type="text" ng-model="name" placeholder="Votre nom" required>
       <input type="text" ng-model="prenom" placeholder="Votre prénom" required>
       <input type="date" ng-model="date" placeholder="Votre date de naissance" required>
-      <div class="radio-group">
-        <label>
-          <input type="radio" ng-model="classe" name="classe" value="IDEV" required> IDEV
-        </label>
-        <label>
-          <input type="radio" ng-model="classe" name="classe" value="RSI"> RSI
-        </label>
+    <div class="select-style">
+      <select ng-model="classe" required>
+        <option value="IDEV">IDEV</option>
+        <option value="RSI">RSI</option>
+      </select>
     </div>
       <button type="submit">Ajouter élève</button>
     </form>
@@ -48,7 +46,7 @@
       $scope.name = "";
       $scope.prenom = "";
       $scope.date = "";
-      $scope.classe = "";
+      $scope.classe = "IDEV";
       
       $scope.ajout = function(){
         
