Adding default value to classe after submit the value

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         $scope.name = "";
         $scope.prenom = "";
         $scope.date = "";
-        $scope.classe = "";
+        $scope.classe = "IDEV";
       
       };
     });
