Add new classe MSI

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <select ng-model="classe" required>
         <option value="IDEV">IDEV</option>
         <option value="RSI">RSI</option>
+        <option value="MSI">MSI</option>
       </select>
     </div>
       <button type="submit">Ajouter élève</button>
